Fix admin menu not showing up, delete old animal image when a new one is uploaded, start on undo button

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -22,6 +22,7 @@ a:hover {
 }
 
 #header {
+	position: initial;
 	overflow: hidden;
 	background: #bbb;
 }
@@ -146,6 +147,7 @@ a:hover {
 	border: none;
 	background: none;
 	font-size: 100%;
+	cursor: pointer;
 }
 
 #body img#animal {
